# cloner

./: Cargo.toml  README.md  crates.js  sample.toml  search-index.js  settings.html  source-files.js
.github/workflows/: publish.yml  test.yml
cloner/: all.html  fn.clone_cmd.html  fn.main.html  fn.read_file.html  fn.report_config.html  index.html  sidebar-items.js  struct.Cli.html  struct.Cloner.html  struct.Config.html
implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
src/: main.rs
src/cloner/: main.rs.html
