[package]
name = "cloner"
version = "0.1.1"
authors = ["Kijima Daigo <norimaking777@gmail.com>"]
repository = "https://github.com/kijimaD/cloner"
keywords = ["git", "clone"]
license-file = "LICENSE"
readme = "README.md"
description = "Literate git clone."
documentation = "http://kijimaD.github.io/cloner/cloner/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.0", features = ["derive"] }
serde = "^1.0"
serde_derive = "^1.0"
toml = "^0.4"
shellexpand = "^2.1"